--- a/app/res/layout/activity_connect_id.xml
+++ b/app/res/layout/activity_connect_id.xml
@@ -9,6 +9,7 @@
         android:id="@+id/nav_host_fragment_connectid"
         android:layout_height="0dp"
         android:layout_width="0dp"
+        app:defaultNavHost="true"
         android:name="androidx.navigation.fragment.NavHostFragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
