--- a/app/res/navigation/nav_graph_connectid.xml
+++ b/app/res/navigation/nav_graph_connectid.xml
@@ -28,15 +28,19 @@
         </action>
         <action
             android:id="@+id/action_connectid_recovery_decision_to_connectid_pin"
+            app:popUpTo="@id/connectid_biometric_config"
             app:destination="@id/connectid_pin" />
         <action
             android:id="@+id/action_connectid_recovery_decision_to_connectid_password"
+            app:popUpTo="@id/connectid_biometric_config"
             app:destination="@id/connectid_password" />
         <action
             android:id="@+id/action_connectid_recovery_decision_to_connectid_message"
+            app:popUpTo="@id/connectid_biometric_config"
             app:destination="@id/connectid_message" />
         <action
             android:id="@+id/action_connectid_recovery_decision_self"
+            app:popUpTo="@id/connectid_biometric_config"
             app:destination="@id/connectid_recovery_decision" />
     </fragment>
 
@@ -58,21 +62,27 @@
             app:argType="string" />
         <action
             android:id="@+id/action_connectid_phone_to_connectid_registration"
+            app:popUpTo="@id/connectid_phone"
             app:destination="@id/connectid_registration" />
         <action
             android:id="@+id/action_connectid_phone_to_connectid_consent"
+            app:popUpTo="@id/connectid_phone"
             app:destination="@id/connectid_consent" />
         <action
             android:id="@+id/action_connectid_phone_to_connectid_pin"
+            app:popUpTo="@id/connectid_phone"
             app:destination="@id/connectid_pin" />
         <action
             android:id="@+id/action_connectid_phone_to_connectid_phone_verify"
+            app:popUpTo="@id/connectid_phone"
             app:destination="@id/connectid_phone_verify" />
         <action
             android:id="@+id/action_connectid_phone_to_connectid_biometric_config"
+            app:popUpTo="@id/connectid_phone"
             app:destination="@id/connectid_biometric_config" />
         <action
             android:id="@+id/action_connectid_phone_to_connectid_message"
+            app:popUpTo="@id/connectid_phone"
             app:destination="@id/connectid_message" />
     </fragment>
 
@@ -87,6 +97,7 @@
             app:nullable="false"/>
         <action
             android:id="@+id/action_connectid_consent_to_connectid_phone"
+            app:popUpTo="@id/connectid_consent"
             app:destination="@id/connectid_phone" />
     </fragment>
 
@@ -97,12 +108,15 @@
         tools:layout="@layout/screen_connect_verify" >
         <action
             android:id="@+id/action_connectid_biometric_config_to_connectid_phone_verify"
+            app:popUpTo="@id/connectid_biometric_config"
             app:destination="@id/connectid_phone_verify" />
         <action
             android:id="@+id/action_connectid_biometric_config_to_connectid_registration"
+            app:popUpTo="@id/connectid_biometric_config"
             app:destination="@id/connectid_registration" />
         <action
             android:id="@+id/action_connectid_biometric_config_to_connectid_message"
+            app:popUpTo="@id/connectid_biometric_config"
             app:destination="@id/connectid_message" />
         <argument
             android:name="callingClass"
@@ -118,12 +132,15 @@
 
         <action
             android:id="@+id/action_connectid_phone_verify_to_connectid_pin"
+            app:popUpTo="@id/connectid_phone_verify"
             app:destination="@id/connectid_pin" />
         <action
             android:id="@+id/action_connectid_phone_verify_to_connectid_biometric_config"
+            app:popUpTo="@id/connectid_phone_verify"
             app:destination="@id/connectid_biometric_config" />
         <action
             android:id="@+id/action_connectid_phone_verify_to_connectid_phone"
+            app:popUpTo="@id/connectid_phone_verify"
             app:destination="@id/connectid_phone" />
         <argument
             android:name="callingClass"
@@ -159,12 +176,15 @@
             app:argType="string" />
         <action
             android:id="@+id/action_connectid_phone_verify_to_connectid_password"
+            app:popUpTo="@id/connectid_phone_verify"
             app:destination="@id/connectid_password" />
         <action
             android:id="@+id/action_connectid_phone_verify_to_connectid_message"
+            app:popUpTo="@id/connectid_phone_verify"
             app:destination="@id/connectid_message" />
         <action
             android:id="@+id/action_connectid_phone_verify_self"
+            app:popUpTo="@id/connectid_phone_verify"
             app:destination="@id/connectid_phone_verify" />
     </fragment>
 
@@ -180,9 +200,11 @@
 
         <action
             android:id="@+id/action_connectid_registration_to_connectid_biometric_config"
+            app:popUpTo="@id/connectid_registration"
             app:destination="@id/connectid_biometric_config" />
         <action
             android:id="@+id/action_connectid_registration_to_connectid_phone"
+            app:popUpTo="@id/connectid_registration"
             app:destination="@id/connectid_phone" />
         <argument
             android:name="phone"
@@ -214,15 +236,19 @@
             app:argType="string" />
         <action
             android:id="@+id/action_connectid_message_to_connectid_biometric_config"
+            app:popUpTo="@id/connectid_message"
             app:destination="@id/connectid_biometric_config" />
         <action
             android:id="@+id/action_connectid_message_to_connectid_pin"
+            app:popUpTo="@id/connectid_message"
             app:destination="@id/connectid_pin" />
         <action
             android:id="@+id/action_connectid_message_to_connectid_phone_verify"
+            app:popUpTo="@id/connectid_message"
             app:destination="@id/connectid_phone_verify" />
         <action
             android:id="@+id/action_connectid_message_to_connectid_phone"
+            app:popUpTo="@id/connectid_message"
             app:destination="@id/connectid_phone" />
 
     </fragment>
@@ -254,18 +280,23 @@
             app:argType="boolean" />
         <action
             android:id="@+id/action_connectid_pin_to_connectid_phone_verify"
+            app:popUpTo="@id/connectid_pin"
             app:destination="@id/connectid_phone_verify" />
         <action
             android:id="@+id/action_connectid_pin_to_connectid_phone"
+            app:popUpTo="@id/connectid_pin"
             app:destination="@id/connectid_phone" />
         <action
             android:id="@+id/action_connectid_pin_to_connectid_message"
+            app:popUpTo="@id/connectid_pin"
             app:destination="@id/connectid_message" />
         <action
             android:id="@+id/action_connectid_pin_self"
+            app:popUpTo="@id/connectid_pin"
             app:destination="@id/connectid_pin" />
         <action
             android:id="@+id/action_connectid_pin_to_connectid_password"
+            app:popUpTo="@id/connectid_pin"
             app:destination="@id/connectid_password" />
     </fragment>
 
@@ -288,15 +319,19 @@
             app:argType="string" />
         <action
             android:id="@+id/action_connectid_password_to_connectid_message"
+            app:popUpTo="@id/connectid_password"
             app:destination="@id/connectid_message" />
         <action
             android:id="@+id/action_connectid_password_to_connectid_phone_verify"
+            app:popUpTo="@id/connectid_password"
             app:destination="@id/connectid_phone_verify" />
         <action
             android:id="@+id/action_connectid_password_to_connectid_pin"
+            app:popUpTo="@id/connectid_password"
             app:destination="@id/connectid_pin" />
         <action
             android:id="@+id/action_connectid_password_to_connectid_phone"
+            app:popUpTo="@id/connectid_password"
             app:destination="@id/connectid_phone" />
     </fragment>
 
