--- a/app/res/navigation/nav_graph_connectid.xml
+++ b/app/res/navigation/nav_graph_connectid.xml
@@ -122,6 +122,10 @@
             android:name="callingClass"
             app:argType="integer"
             app:nullable="false"/>
+        <argument
+            android:name="allowPassword"
+            app:argType="boolean"
+            android:defaultValue="false"/>
     </fragment>
 
     <fragment
