--- a/app/res/layout/view_country_code_edittext.xml
+++ b/app/res/layout/view_country_code_edittext.xml
@@ -29,6 +29,7 @@
         android:background="@android:color/transparent"
         android:inputType="phone"
         android:paddingStart="8dp"
+        android:hint="00000000"
         android:paddingEnd="8dp"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
