--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -151,6 +151,13 @@
     <color name="connect_border_color">#1A3A42C7</color>
     <color name="connect_dark_blue_color">#3942C7</color>
     <color name="connect_blue_color">#3A42C7</color>
+    <color name="connect_tealish_blue_color">#E7EAF8</color>
     <color name="connect_yellowish_orange_color">#F3B34D</color>
     <color name="connect_light_grey">#D9D9D9</color>
+    <color name="connect_light_grey_transparent">#1AD9D9D9</color>
+    <color name="connect_divider_color">#E5E7EB</color>
+    <color name="connect_dark_grey">#9CA3AF</color>
+    <color name="connect_orange_yellow">#FFEFD5</color>
+    <color name="connect_green">#16A085</color>
+    <color name="connect_light_green">#E6F5E5</color>
 </resources>
