--- a/app/res/layout/fragment_connect_delivery_progress.xml
+++ b/app/res/layout/fragment_connect_delivery_progress.xml
@@ -1,90 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/connect_background_color">
 
     <ImageView
         android:id="@+id/connect_delivery_refresh"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:contentDescription="@string/refresh"
         android:src="@drawable/cloud_backup"
-        android:contentDescription="@string/refresh" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/connect_delivery_last_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
         android:layout_marginTop="3dp"
         app:layout_constraintEnd_toStartOf="@id/connect_delivery_refresh"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/connect_delivery_progress_alert_tile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_delivery_refresh"
-        android:layout_marginTop="2dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/dots_rect_back"
         android:visibility="gone"
-        >
+        app:layout_constraintTop_toBottomOf="@id/connect_delivery_refresh">
 
         <ImageView
             android:id="@+id/connect_payment_confirm_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/monetary_support"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/connect_payment_confirm_label"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/connect_payment_confirm_icon"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toEndOf="@id/connect_payment_confirm_icon"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/connect_payment_confirm_yes_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/connect_payment_confirm_label"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="10dp"
+            android:text="@string/connect_payment_confirm_yes"
             android:textColor="@color/blue"
-            android:text="@string/connect_payment_confirm_yes"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/connect_payment_confirm_label" />
+
         <TextView
             android:id="@+id/connect_payment_confirm_no_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/connect_payment_confirm_label"
-            app:layout_constraintEnd_toStartOf="@id/connect_payment_confirm_yes_button"
             android:layout_marginEnd="40dp"
+            android:text="@string/connect_payment_confirm_no"
             android:textColor="@color/blue"
-            android:text="@string/connect_payment_confirm_no"/>
+            app:layout_constraintEnd_toStartOf="@id/connect_payment_confirm_yes_button"
+            app:layout_constraintTop_toBottomOf="@id/connect_payment_confirm_label" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/connect_delivery_progress_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_delivery_progress_alert_tile"
-        android:layout_marginTop="5dp"
-        android:background="@color/solid_blue"
-        app:tabTextColor="@color/white" />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/connect_delivery_progress_view_pager"
+    <LinearLayout
+        android:id="@+id/llJobListTabSeparated"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/connect_delivery_progress_tabs"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connect_delivery_progress_alert_tile">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/connect_delivery_progress_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            app:tabGravity="fill"
+            app:tabIndicator="@drawable/ic_connect_pager_indicator"
+            app:tabIndicatorColor="@color/connect_blue_color"
+            app:tabInlineLabel="true"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/connect_blue_color"
+            app:tabTextColor="@color/connect_light_grey" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/connect_divider_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/connect_delivery_progress_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
