--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -122,6 +122,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="14sp"
                             android:layout_marginTop="10dp"
+                            android:paddingBottom="16dp"
                             android:textColor="@color/white"
                             android:textAlignment="center"/>
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -261,12 +262,14 @@
             android:text="@string/connect_learn_warning_ended"
             android:visibility="gone"/>
 
-        <Button
+        <org.commcare.views.connect.RoundedButton
             android:id="@+id/connect_learning_review_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             tools:text="@string/connect_learn_review"
+            app:roundButtonTextColor="@color/white"
+            app:roundButtonBackgroundColor="@color/connect_blue_color"
             android:visibility="gone"/>
         <org.commcare.views.connect.RoundedButton
             android:id="@+id/connect_learning_button"
@@ -302,7 +305,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
                         android:textSize="14sp"
-                        android:text="@string/connect_progress_title"/>
+                        android:text="@string/connect_learn_progress_title"/>
                     <TextView
                         android:id="@+id/connect_job_intro_learning_summary"
                         android:layout_width="match_parent"
