--- a/app/res/layout/fragment_secondary_phone_number.xml
+++ b/app/res/layout/fragment_secondary_phone_number.xml
@@ -137,6 +137,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_width="wrap_content"
                 android:text="Learn More"
+                android:visibility="gone"
                 app:roundButtonBorderColor="@color/border_grey"
                 app:roundButtonBorderVisible="true"
                 app:roundButtonTextColor="@color/connect_blue_color" />
