--- a/app/res/layout/screen_connect_user_deactivate_otp_verify.xml
+++ b/app/res/layout/screen_connect_user_deactivate_otp_verify.xml
@@ -56,17 +56,6 @@
                 android:textColor="@color/connect_secondary_text"
                 android:textSize="16sp"
                 tools:text="+91 7748962888" />
-
-            <org.commcare.views.connect.connecttextview.ConnectBoldTextView
-                android:id="@+id/connect_phone_verify_change"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:gravity="end"
-                android:text="@string/connect_verify_phone_change"
-                android:textColor="@color/connect_blue_color"
-                android:textSize="16sp"
-                android:visibility="visible" />
         </LinearLayout>
 
         <LinearLayout
@@ -93,19 +82,19 @@
 
             </LinearLayout>
 
-            <org.commcare.views.connect.CustomOtpView
-                android:id="@+id/customOtpView"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/connect_phone_verify_code"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                app:otpViewDigitCount="6"
                 android:layout_marginStart="16dp"
-                app:otpViewTextColor="@color/connect_blue_color"
-                app:otpViewBorderColor="@color/connect_blue_color"
-                app:otpViewBorderRadius="4dp"
-                app:otpViewBorderWidth="0.5dp"
-                app:otpViewErrorTextColor="@color/connect_red"
-                app:otpViewErrorBorderColor="@color/connect_red"
-                app:otpViewTextSize="6sp" />
+                android:background="@drawable/connect_edit_text_bg"
+                android:hint="OTP"
+                android:imeOptions="actionNext"
+                android:inputType="numberDecimal"
+                android:visibility="visible"
+                android:paddingStart="16dp"
+                android:textColorHint="@color/connect_grey"
+                tools:ignore="RtlSymmetry" />
 
         </LinearLayout>
 
@@ -138,26 +127,6 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:orientation="horizontal">
-
-            <org.commcare.views.connect.RoundedButton
-                android:id="@+id/connect_deactivate_button"
-                android:layout_width="150dp"
-                android:layout_height="45dp"
-                android:layout_gravity="end"
-                android:gravity="center"
-                android:text="@string/connect_deactivate_account"
-                app:roundButtonBackgroundColor="@color/white"
-                app:roundButtonBorderRadius="@dimen/dp48"
-                app:roundButtonIconLeftAlign="false"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                app:roundButtonIconTintColor="@color/white"
-                app:roundButtonTextColor="@color/connect_blue_color"
-                app:roundButtonBorderWidth="0.5dp"
-                android:visibility="gone"
-                app:roundButtonBorderVisible="true"
-                app:roundButtonBorderColor="@color/connect_blue_color"
-                app:roundButtonTextSize="6.5sp" />
 
             <org.commcare.views.connect.RoundedButton
                 android:id="@+id/connect_resend_button"
@@ -196,6 +165,5 @@
                 app:roundButtonTextSize="6.5sp" />
 
         </RelativeLayout>
-
     </LinearLayout>
 </layout>
