--- a/app/res/layout/fragment_connect_delivery_progress.xml
+++ b/app/res/layout/fragment_connect_delivery_progress.xml
@@ -99,12 +99,65 @@
                         app:layout_constraintTop_toBottomOf="@id/connect_payment_confirm_label" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <include
-                    android:id="@+id/viewJobCard"
-                    layout="@layout/view_job_card"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp" />
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cvConnectMessage"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/viewJobCard"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="-35dp"
+                        android:layout_marginRight="10dp"
+                        app:cardBackgroundColor="@color/connect_light_orange_color"
+                        app:cardCornerRadius="15dp"
+                        app:cardElevation="10dp">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:paddingStart="15dp"
+                            android:paddingTop="35dp"
+                            android:layout_marginBottom="15dp"
+                            android:paddingEnd="15dp">
+
+                            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                                android:id="@+id/tvConnectMessage"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:text="@string/connect_job_tile_daily_limit_description"
+                                android:layout_marginEnd="10dp"
+                                android:textColor="@color/connect_warning_color"
+                                android:textSize="14sp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <!--                    <org.commcare.views.connect.RoundedButton-->
+                            <!--                        android:id="@+id/btnOverLimit"-->
+                            <!--                        android:layout_width="wrap_content"-->
+                            <!--                        android:layout_height="30dp"-->
+                            <!--                        android:text="@string/connect_job_tile_daily_limit"-->
+                            <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+                            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
+                            <!--                        app:layout_constraintTop_toTopOf="parent"-->
+                            <!--                        app:roundButtonTextSize="4sp" />-->
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <include
+                        android:id="@+id/viewJobCard"
+                        layout="@layout/view_job_card"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp" />
+                </RelativeLayout>
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
