--- a/app/res/drawable/commcare_actionbar_logo_spacing.xml
+++ b/app/res/drawable/commcare_actionbar_logo_spacing.xml
@@ -2,6 +2,6 @@
 <layer-list
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/logo"
+        android:drawable="@drawable/commcare_actionbar_logo"
         android:right="16dp"/>
 </layer-list>
