--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -74,7 +74,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:textSize">22sp</item>
-        <item name="android:fontWeight" tools:targetApi="o">400</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ActionBarSubtitleTextStyle">
