--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -145,15 +145,12 @@
     <color name="red_900">#B71C1C</color>
     
     <!-- Button colors -->
-    <color name="button_primary">#005ab2</color>
     <color name="button_disabled">#d0e3ff</color>
-
     <color name="start_home_button">#6AB849</color>
     <color name="start_save_button">#1B998B</color>
-    <color name="start_sync_button">#5D70D2</color>
+    <color name="button_background_color">#5D70D2</color>
     <color name="start_sync_dark_button">#3b4fb6</color>
     <color name="start_logout_button">#373534</color>
-    <color name="button_primary_color"> #3A42C7</color>
 
 
 </resources>
