--- a/app/res/layout/square_card.xml
+++ b/app/res/layout/square_card.xml
@@ -43,7 +43,7 @@
                 android:paddingBottom="@dimen/standard_spacer"
                 android:paddingLeft="@dimen/standard_spacer"
                 android:paddingRight="@dimen/standard_spacer"
-                android:textSize="@dimen/font_size_xlarger"
+                android:textSize="@dimen/font_size_dp_small"
                 app:text_size_small="@dimen/font_size_xlargest"
                 android:paddingStart="@dimen/standard_spacer"
                 android:paddingEnd="@dimen/standard_spacer" />
